# Squirrel

./: .gitignore  .gitmodules  README.md  deploy.bash
CaseStudy/: .project
CaseStudy/ServerProto/: .gitignore
CaseStudy/ServerProto/src/hello/world/: helloworld_case.go
CaseStudy/ServerProto/src/http/: simple_server.go
CaseStudy/ServerProto/src/https/: web_server.go  web_starter.go
Client/: maker.bash
Client/3rd/: CMakeLists.txt
Client/3rd/AFNetworking/: CMakeLists.txt
Client/3rd/SocketRocket/: CMakeLists.txt
Client/Squirrel/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  Define.h  Info.plist  Info.plist.in  main.m
Client/Squirrel/AFHttpViewController/: AFHttpViewController.h  AFHttpViewController.m
Client/Squirrel/AdminPublish/: AdminPublishTableViewCell.m  AdminPublishTableViewCell.xib  AdminPublishViewController.h  AdminPublishViewController.m  NotificationPublishViewController.h  NotificationPublishViewController.m  NotificationPublishViewController.xib  OneClassRegisterStudentViewController.h  OneClassRegisterStudentViewController.m  OneClassRegisterStudentViewController.xib
Client/Squirrel/BBS/: BBSViewController.m  BBSViewController.xib
Client/Squirrel/Base.lproj/: LaunchScreen.xib  Main.storyboard
Client/Squirrel/DataModel/: AdminPublishViewData.h  MeViewData.h  MeViewData.m  NotificationDataItem.h  NotificationDataItem.m  OneClassReigsterStudentData.h  OneClassReigsterStudentData.m  UserRegisterDataItem.h  UserViewData.h  UserViewData.m
Client/Squirrel/Login/: LoginViewController.h  LoginViewController.m  LoginViewController.xib
Client/Squirrel/Me/: MeViewController.h  MeViewController.m  MeViewController.xib
Client/Squirrel/Setting/: SettingViewController.h  SettingViewController.m  SettingViewController.xib
Client/Squirrel/Squirrel/: AppDelegate.m  Define.h
Client/Squirrel/Squirrel.xcodeproj/: project.pbxproj
Client/Squirrel/Squirrel/AdminPublish/: AdminPublishTableViewCell.h  AdminPublishTableViewCell.xib  AdminPublishViewController.h  AdminPublishViewController.m  AdminPublishViewController.xib  NotificationPublishViewController.m  NotificationPublishViewController.xib
Client/Squirrel/Squirrel/BBS/: BBSViewController.h  BBSViewController.m
Client/Squirrel/Squirrel/DataModel/: AdminPublishViewData.m  NotificationDataItem.h  UserRegisterDataItem.m  UserViewData.m
Client/Squirrel/Squirrel/Login/: LoginViewController.m  LoginViewController.xib
Client/Squirrel/Squirrel/Me/: MeViewController.m
Client/Squirrel/Squirrel/Setting/: SettingViewController.m  SettingViewController.xib
Client/Squirrel/Squirrel/TabBarViewController/: DictionaryTabBarViewController.h  GeneralTabBarViewController.h  GeneralTabBarViewController.m
Client/Squirrel/Squirrel/UserRegister/: UserRegisterNotificationViewController.m  UserRegisterNotificationViewController.xib
Client/Squirrel/SquirrelTests/: Info.plist  SquirrelTests.m
Client/Squirrel/TabBarViewController/: DictionaryTabBarViewController.h  DictionaryTabBarViewController.m  GeneralTabBarViewController.h  GeneralTabBarViewController.m
Client/Squirrel/URLManager/: URLManager.h  URLManager.m
Client/Squirrel/UserRegister/: UserRegisterNotificationViewController.h  UserRegisterNotificationViewController.m
Client/cmake/: Utils.cmake  iOS.cmake
DataBase/: .gitignore  start_db.bash
Js/: websocket_tester.js
Server/: .gitignore  .project  SquirrelChuckle.launch  maker.bash
Server/src/: td.go
Server/src/main/: gateway.go
Server/src/mux_proto/: mux_case.go
Server/src/server/: status.go
Server/src/server/v1/: routers.go
Server/src/squirrelchuckle/: main.go
Server/src/squirrelchuckle/conf/: app.conf  app_conf.go  appconf.json  cert.pem  inapp.conf  key.pem
Server/src/squirrelchuckle/controllers/: api_controller.go  apis.go  broadcaster.go  broadercaster.go  class.go  class_controller.go  common.go  device_token.go  device_token_controller.go  device_token_testcase.go  devices.go  devices_testcase.go  oneClass.go  oneClassUserCount.go  oneClassUsers.go  post.go  register.go  registerStatus.go  unregister.go  user.go  user_controller.go  websocket.go
Server/src/squirrelchuckle/core/: app.go  appsetting.go  auth.go  common.go  database.go  servicemanager.go
Server/src/squirrelchuckle/database/: database.go  models.go
Server/src/squirrelchuckle/models/: events.go
Server/src/squirrelchuckle/routers/: router.go
Server/src/squirrelchuckle/services/: apn_service.go  apns.go  applepush.go  appsetting.go  common.go  database.go  device_token_service.go  devicetoken.go  dummy.go  email.go  manager.go  user.go  users.go
Server/src/squirrelchuckle/settings/: app_setting.go  appsetting.go
Server/src/squirrelchuckle/tests/: default_test.go
Server/src/squirrelchuckle/utility/: file.go  toolkit.go
Server/src/squirreltest/: main.go
Server/src/utils/: map_helper.go
